# named-objects

./: CMakeLists.txt  README.md
include/: named_object.hpp
tests/: main.cpp
